infra/development/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tazaker.dev
      http:
        paths:
          - path: /api/(auth|users|onboarding)/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-srv
                port:
                  number: 3000
    - host: tazaker.dev
      http:
        paths:
          - path: /api/events/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: events-srv
                port:
                  number: 3000
    - host: tazaker.dev
      http:
        paths:
          - path: /api/tickets/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tickets-srv
                port:
                  number: 3000
    - host: tazaker.dev
      http:
        paths:
          - path: /api/orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
    - host: tazaker.dev
      http:
        paths:
          - path: /api/payments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
    - host: tazaker.dev
      http:
        paths:
          - path: /v2/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-v2-srv
                port:
                  number: 3000
    - host: tazaker.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-srv
                port:
                  number: 3000
